@@ -1,19 +1,23 @@
 prune bitten/htdocs
 prune bitten/templates
 prune doc
-prune scripts
+
+exclude MANIFEST.in
+include setup.py
+include ChangeLog
+include COPYING
+include MANIFEST-SLAVE.in
+include README.txt
+
 exclude bitten/*.py
-include bitten/build/tests/*.py
 exclude bitten/report/*.py
 exclude bitten/report/tests/*.py
 exclude bitten/tests/*.py
-include setup.py
-exclude MANIFEST.in
 include bitten/__init__.py
 include bitten/build/*.py
+include bitten/build/tests/*.py
 include bitten/recipe.py
 include bitten/slave.py
 include bitten/slave_tests/*.py
 include bitten/util/*.py
 include bitten/util/tests/*.py
-
